--- a/index.htm
+++ b/index.htm
@@ -193,7 +193,7 @@ header.hidden {
     <h2>Contact Me at my Facebook</h2>
     <a href="https://www.facebook.com/cyruzdave26" target="_blank">Click here</a>
     <div class="direct-links">
-      <a href="mailto:youremail@example.com">Email</a>
+      <a href="mailto:juanitescyruz3@example.com">Email</a>
       <a href="tel:+639936843176">Phone</a>
     </div>
   </d>
@@ -208,8 +208,8 @@ header.hidden {
       <a href="#contact">Contact</a>
     </nav>
     <div class="social-media">
-      <a href="https://github.com/yourprofile"><i class="fab fa-github"></i></a>
-      <a href="https://instagram.com/yourprofile"><i class="fab fa-instagram"></i></a>
+      <a href="https://github.com/cyruzwebdeve"><i class="fab fa-github"></i></a>
+      <a href="https://www.instagram.com/kunai_cyy"><i class="fab fa-instagram"></i></a>
     </div>
     <p>&copy; 2024 Cyruz Dave. All Rights Reserved.</p>
   </footer>
