--- a/index.htm
+++ b/index.htm
@@ -208,8 +208,8 @@ header.hidden {
       <a href="#contact">Contact</a>
     </nav>
     <div class="social-media">
-      <a href="https://github.com/cyruzwebdeve"><i class="fab fa-github"></i></a>
-      <a href="https://www.instagram.com/kunai_cyy"><i class="fab fa-instagram"></i></a>
+      <a href="https://github.com/cyruzwebdeve" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://www.instagram.com/kunai_cyy" target="_blank"><i class="fab fa-instagram"></i></a>
     </div>
     <p>&copy; 2024 Cyruz Dave. All Rights Reserved.</p>
   </footer>
